# ckanext-dcathr

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/dcathr/: plugin.py
ckanext/dcathr/assets/: dcathr-validate-dataset.js  webassets.yml
ckanext/dcathr/templates/package/snippets/: additional_info.html  package_form.html
ckanext/dcathr/tests/: test_plugin.py
