[metadata]
name = ckanext-dcathr
version = 0.0.1
description = extension of ckan for customizing default metadata fields and automation of dataset schema validation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josip555/ckanext-dcathr
author = Josip Arelić
author_email = josip.arelic00@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN metadata schema validation dcat dcat-ap automation data europa eu

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             dcathr = ckanext.dcathr.plugin:DcathrPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/dcathr/i18n/ckanext-dcathr.pot
width = 80

[init_catalog]
domain = ckanext-dcathr
input_file = ckanext/dcathr/i18n/ckanext-dcathr.pot
output_dir = ckanext/dcathr/i18n

[update_catalog]
domain = ckanext-dcathr
input_file = ckanext/dcathr/i18n/ckanext-dcathr.pot
output_dir = ckanext/dcathr/i18n
previous = true

[compile_catalog]
domain = ckanext-dcathr
directory = ckanext/dcathr/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
